grammar.js
    compilation_unit: ($) => repeat($._statement),

    _statement: ($) =>
      choice(
        $.let_binding,
        $.type_definition,
        $.expression_statement,
        $.open_statement,
        $.module_definition,
        $.mutable_record_update,
      ),

    expression_statement: ($) => seq($.expression, $._semicolon),
    module_definition: ($) =>
      seq(
        "module",
        // optional($._attribute),
        optional("rec"),
        $.module_binding,
        $._semicolon,
      ),

    unit: ($) => seq("(", ")"),

    module_binding: ($) =>
      seq(
        field("name", choice($._module_name, alias("_", $.module_name))),
        repeat($.module_parameter),
        // optional($._module_typed),
        optional(seq(choice("=", ":="), field("body", $._module_expression))),
        // repeat($.item_attribute),
      ),

    _module_expression: ($) =>
      choice(
        $._simple_module_expression,
        $.module_path,
        // $.structure,
        // $.functor,
        // $.module_application,
      ),

    let_binding: ($) =>
      seq(
        "let",
        optional("rec"),
        field("pattern", choice($._value_name, $.record_destructure)),
        optional(seq(":", $._type)),
        "=",
        $.expression,
        $._semicolon,
      ),

    expression: ($) =>
      choice($._expression, seq("(", $.expression, ":", $._type, ")")),

    _expression: ($) =>
      choice(
        $._simple_expression,
        $.application_expression,
        $.infix_expression,
        $.sign_expression,
        // $.set_expression,
        $.if_expression,
        $.ternary_expression,
        // $.while_expression,
        // $.for_expression,
        $.switch_expression,
        $.function_expression,
        // $.fun_expression,
        // $.try_expression,
        // $.let_expression,
        // $.assert_expression,
        // $.lazy_expression,
        // $.let_module_expression,
        // $.let_open_expression,
        // $.let_exception_expression

        // Reason Only
        $.unpack,

        // JSX
        $._jsx_element,
      ),

    _simple_expression: ($) =>
      choice(
        $.value_path,
        $._constant,
        // $.typed_expression,
        $.constructor_path,
        $.tag,
        $.list_expression,
        $.array_expression,
        $.product_expression,
        $.record_expression,
        $.prefix_expression,
        // $.hash_expression,
        $.field_get_expression,
        $.array_get_expression,
        // $.string_get_expression,
        // $.bigarray_get_expression,
        // $.coercion_expression,
        // $.local_open_expression,
        // $.package_expression,
        // $.new_expression,
        // $.object_copy_expression,
        // $.method_invocation,
        // $.object_expression,
        $.parenthesized_expression,
        // $.ocamlyacc_value,
        // $._extension
      ),

    parenthesized_expression: ($) =>
      parenthesize($._expression),

    unpack: ($) => prec.left(PREC.prefix, seq("...", $._simple_expression)),

    _simple_pattern: ($) =>
      choice(
        $._value_pattern,
        $._signed_constant,
        // $.typed_pattern,
        $.constructor_path,
        $.tag,
        // $.polymorphic_variant_pattern,
        // $.record_pattern,
        // $.list_pattern,
        // $.array_pattern,
        // $.local_open_pattern,
        // $.package_pattern,
        // $.parenthesized_pattern,
        // $._extension
      ),

    _simple_value_pattern: ($) => alias($._identifier, $.value_pattern),

    _pattern: ($) =>
      choice(
        $._simple_pattern,
        // $.alias_pattern,
        // $.or_pattern,
        $.constructor_pattern,
        // $.tag_pattern,
        // $.tuple_pattern,
        // $.cons_pattern,
        // $.range_pattern,
        // $.lazy_pattern,
        // $.exception_pattern
      ),

    // list_concat: ($) =>
    //   prec.left(PREC.concat, seq($.expression, "@", $.expression)),

    // Ocaml Overrides of basic types
    function_expression: ($) =>
      prec.right(
        PREC.app,
        seq(
          choice(seq("(", commaSep0($._parameter), ")"), $._parameter),
          optional(seq(":", $._type)),
          "=>",
          choice($.expression, $.block),
        ),
      ),

    // NOTE: Had more stuff in ocaml
    // choice(
    // alias($._parenthesized_abstract_type, $.abstract_type),
    // ),
    _parameter: ($) => $.parameter,

    parameter: ($) =>
      prec.right(
        PREC.prod,
        choice(
          seq($._identifier, optional($._typed)),
          seq("~", $._identifier, optional($._typed)),
          seq(
            "~",
            $._identifier,
            optional($._typed),
            "=",
            choice($.expression, "?"),
          ),
          // seq(
          //   choice('~', '?'),
          //   field('pattern', $._simple_value_pattern)
          // ),
          // seq(
          //   $._label,
          //   token.immediate(':'),
          //   field('pattern', $._simple_pattern)
          // ),
          // seq(
          //   choice('~', '?'),
          //   '(',
          //   field('pattern', $._simple_value_pattern),
          //   optional($._typed),
          //   optional(seq('=', $._sequence_expression)),
          //   ')'
          // ),
          // seq(
          //   $._label,
          //   token.immediate(':'),
          //   '(',
          //   field('pattern', $._pattern),
          //   optional($._typed),
          //   seq('=', $._sequence_expression),
          //   ')'
          // )
        ),
      ),

    // labeled_argument: ($) =>
    //   choice(
    //     seq("~", $._identifier, optional(seq(":", $.type_annotation))),
    //     seq(
    //       "~",
    //       $._identifier,
    //       optional(seq(":", $.type_annotation)),
    //       "=",
    //       choice($.expression, "?")
    //     )
    //   ),

    // _simple_expression: ($) => choice($.identifier),
    // choice(
    //   $.value_path,
    // $._constant,
    //   $.typed_expression,
    //   $.constructor_path,
    //   $.tag,
    //   $.list_expression,
    //   $.array_expression,
    //   $.record_expression,
    //   $.prefix_expression,
    //   $.hash_expression,
    //   $.field_get_expression,
    //   $.array_get_expression,
    //   $.string_get_expression,
    //   $.bigarray_get_expression,
    //   $.coercion_expression,
    //   $.local_open_expression,
    //   $.package_expression,
    //   $.new_expression,
    //   $.object_copy_expression,
    //   $.method_invocation,
    //   $.object_expression,
    //   $.parenthesized_expression,
    //   $.ocamlyacc_value,
    //   $._extension
    // ),

    // argument: ($) =>
    //   prec.left(
    //     1,
    //     choice(
    //       seq($._identifier, optional(seq(":", $.type_annotation))),
    //     )
    //   ),

    application_expression: ($) =>
      prec.left(
        PREC.app,
        seq(field("function", $.expression), "(", commaSep0($._argument), ")"),
      ),

    _label: ($) => seq("~", $._label_name),
    _argument: ($) => choice($._expression, $.labeled_argument),
    block: ($) => prec.right(PREC.block, seq("{", repeat($._statement), "}")),

    _type: ($) =>
      choice($._tuple_type, $.function_type, $.aliased_type, $.type_nested),

    identifier: ($) => $._identifier,

    // Copied from JS
    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    comment: ($) =>
      choice(
        token(
          choice(seq("//", /.*/), seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/")),
        ),
      ),

    _semicolon: ($) => choice(";", $._automatic_semicolon),

    // JSX {{{
    jsx_element: ($) =>
      seq(
        field("open_tag", $.jsx_opening_element),
        repeat($._jsx_child),
        field("close_tag", $.jsx_closing_element),
      ),

    _jsx_child: ($) =>
      choice(
        $.html_character_reference,
        $._jsx_element,
        $.jsx_expression,
        $.unpack,
      ),

    jsx_opening_element: ($) =>
      prec.dynamic(
        -1,
        seq(
          "<",
          optional(
            seq(
              field("name", $._jsx_element_name),
              repeat(field("attribute", $._jsx_attribute)),
            ),
          ),
          ">",
        ),
      ),

    jsx_closing_element: ($) =>
      seq("</", optional(field("name", $._jsx_element_name)), ">"),

    jsx_self_closing_element: ($) =>
      seq(
        "<",
        field("name", $._jsx_element_name),
        repeat(field("attribute", $._jsx_attribute)),
        "/>",
      ),

    _jsx_attribute: ($) => choice($.jsx_attribute, $.jsx_expression),
    _jsx_attribute_name: ($) => alias($._jsx_identifier, $.property_identifier),

    jsx_expression: ($) =>
      prec.left(
        PREC.app,
        choice(seq("{", optional($.expression), "}"), $._value_name, $.tag),
      ),

    jsx_attribute: ($) =>
      seq(
        $._jsx_attribute_name,
        optional(seq("=", optional("?"), $._jsx_attribute_value)),
      ),

    // An entity can be named, numeric (decimal), or numeric (hexadecimal). The
    // longest entity name is 29 characters long, and the HTML spec says that
    // no more will ever be added.
    _jsx_element_name: ($) =>
      choice(
        $._jsx_identifier,
        // alias($.nested_identifier, $.member_expression),
      ),

    _jsx_attribute_value: ($) =>
      choice(
        /* alias($._jsx_string, $.string) ,*/
        $.jsx_expression,
        $._jsx_element,
        $.string,
        $.number,
      ),

    // }}}
  },
});

function commaSep0(rule, no_trailing) {
  return no_trailing
    ? optional(seq(rule, repeat(seq(",", rule))))
    : optional(seq(rule, repeat(seq(",", rule)), optional(",")));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)), optional(","));
}

function commaAtLeast1(rule) {
  return seq(rule, repeat1(seq(",", rule)), optional(","));
}

function parenthesize(rule) {
  return seq("(", rule, ")");
}

function path(prefix, final) {
  return choice(final, seq(prefix, ".", final));
}

function sep1(delimiter, rule) {
  return seq(rule, repeat(seq(delimiter, rule)));
}
